[gd_scene load_steps=18 format=3 uid="uid://ctblaipr8xlya"]

[ext_resource type="Texture2D" uid="uid://cys03i8ln5r17" path="res://Sprites/golem/idle_1.png" id="1_oku7s"]
[ext_resource type="Script" path="res://Script/golem.gd" id="1_p8gu5"]
[ext_resource type="Texture2D" uid="uid://cgddj4jab3n0y" path="res://Sprites/golem/hit_1.png" id="2_j5133"]
[ext_resource type="Texture2D" uid="uid://yr85o5vay2c8" path="res://Sprites/golem/idle_2.png" id="2_wf10c"]
[ext_resource type="Texture2D" uid="uid://pcdujsdsixyp" path="res://Sprites/golem/idle_3.png" id="3_3ncp8"]
[ext_resource type="Texture2D" uid="uid://drm55rprv27xl" path="res://Sprites/golem/hit_2.png" id="3_ose72"]
[ext_resource type="Texture2D" uid="uid://c7urg85dxrnar" path="res://Sprites/golem/idle_4.png" id="4_8dr8k"]
[ext_resource type="Texture2D" uid="uid://crr1u3t1gw1w0" path="res://Sprites/golem/hit_3.png" id="4_cfo2x"]
[ext_resource type="Texture2D" uid="uid://bvdrann8tepmt" path="res://Sprites/golem/idle_5.png" id="5_fady1"]
[ext_resource type="Texture2D" uid="uid://cfca8fppbtw2e" path="res://Sprites/golem/hit_4.png" id="5_vn4rd"]
[ext_resource type="Texture2D" uid="uid://bbrsaldm3kjac" path="res://Sprites/golem/hit_5.png" id="6_62882"]
[ext_resource type="Texture2D" uid="uid://od23wpn7kq8v" path="res://Sprites/golem/idle_6.png" id="6_dvwkn"]
[ext_resource type="Texture2D" uid="uid://cddpix2rbscww" path="res://Sprites/golem/hit_6.png" id="7_ytih5"]
[ext_resource type="PackedScene" uid="uid://c8yhdq6j24jm2" path="res://Scene/killzone.tscn" id="8_v8wr0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_o44wk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j5133")
}, {
"duration": 1.0,
"texture": ExtResource("3_ose72")
}, {
"duration": 1.0,
"texture": ExtResource("4_cfo2x")
}, {
"duration": 1.0,
"texture": ExtResource("5_vn4rd")
}, {
"duration": 1.0,
"texture": ExtResource("6_62882")
}, {
"duration": 1.0,
"texture": ExtResource("7_ytih5")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_oku7s")
}, {
"duration": 1.0,
"texture": ExtResource("2_wf10c")
}, {
"duration": 1.0,
"texture": ExtResource("3_3ncp8")
}, {
"duration": 1.0,
"texture": ExtResource("4_8dr8k")
}, {
"duration": 1.0,
"texture": ExtResource("5_fady1")
}, {
"duration": 1.0,
"texture": ExtResource("6_dvwkn")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gwrf6"]
radius = 176.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5guio"]
radius = 101.597

[node name="Golem" type="Node2D"]
script = ExtResource("1_p8gu5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o44wk")
animation = &"attack"
autoplay = "attack"
frame = 4
frame_progress = 0.915749

[node name="killzone" parent="AnimatedSprite2D" instance=ExtResource("8_v8wr0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/killzone"]
position = Vector2(-41, 0)
shape = SubResource("CircleShape2D_gwrf6")

[node name="RayCastright" type="RayCast2D" parent="."]
target_position = Vector2(144, 0)

[node name="RayCastleft" type="RayCast2D" parent="."]
target_position = Vector2(-231, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5guio")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
